--- a/basic_site/style/styles.css
+++ b/basic_site/style/styles.css
@@ -25,8 +25,15 @@
     object-fit: cover;
 }
 
+#info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 #icons {
     display: flex;
+    justify-content: flex-end;
     gap: 12px;
     margin: 10px;
 }
