--- a/basic_site/style/styles.css
+++ b/basic_site/style/styles.css
@@ -8,6 +8,17 @@
 
 body {
     font-family: 'AlbertSans', sans-serif;
+    margin: 0;
+    overflow: hidden;
+}
+
+#bg-canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
 }
 
 .person_card {
@@ -22,6 +33,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: white;
+    z-index: 1;
 }
 
 #photo {
@@ -49,7 +62,7 @@ body {
 }
 
 #icons a {
-    font-size: 24px;
+    font-size: 40px;
     color: #333;
     text-decoration: none;
 }
